--- a/web/public/css/main.less
+++ b/web/public/css/main.less
@@ -30,9 +30,6 @@
 @border-radius-large: 0;
 @border-radius-small: 0;
 
-@grid-item-center-width: 50px;
-@grid-item-center-height: 50px;
-
 /* ===================
    Browse happy prompt
    =================== */
@@ -100,32 +97,73 @@ body {
 }
 
 .home-panel,
-.folder-panel
+.folder-panel,
 .file-panel {
   margin-bottom: 20px;
 }
 
-.grid {
+/* .grid {
   text-align: center;
 }
 
 .grid-item {
   position: relative;
-  i {
-    color: #999;
-    font-size: 12em;
+}
+ */
+
+.grid {
+  a {
+    text-decoration: none;
   }
 }
 
-.grid-item-center {
+.grid-item {
+  /* position: relative; */
+  height: 200px;
+  width: 200px;
+  margin-bottom: 20px;
+  box-shadow: 6px 6px 3px #888;
+  background: #fff;
+}
+
+.grid-item-action {
+  ul {
+    display: none;
+  }
+  padding: 5px;
+  height: 40px;
+  width: 100%;
+  text-align: right;
+  i {
+    color: lighten(#000, 33.5%);
+  }
+};
+
+.grid-item-holder {
+  position: relative;
+  height: 160px;
+  width: 100%;
+  color: #000;
+}
+
+.grid-item-info {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: @grid-item-center-width;
-  height: @grid-item-center-height;
-  margin-top: -@grid-item-center-height / 2;
-  margin-left: -@grid-item-center-width / 2;
-  line-height: @grid-item-center-height;
+  bottom: 0;
+  width: 100%;
+  padding: 5px;
+  text-align: center;
+}
+
+.grid-item-progress {
+  position: absolute;
+  bottom: 55px;
+  width: 100%;
+  text-align: center;
+}
+
+
+.grid-item:hover .grid-item-action ul {
+  display: block;
 }
 
 .social-icon {
@@ -153,11 +191,16 @@ body {
 }
 
 .footer {
+  display: table;
   position: absolute;
   bottom: 0;
-  width: 100%;
   height: 60px;
+  width: 100%;
   background-color: #f5f5f5;
+  .container {
+    display: table-cell;
+    vertical-align: middle;
+  }
 }
 
 /* ========
@@ -194,8 +237,8 @@ body {
 }
 
 .btn-cir {
-  width: 50px;
   height: 50px;
+  width: 50px;
   line-height: 50px;
   border-radius: 50%;
   padding: 0;
