--- a/web/public/partials/landing.html
+++ b/web/public/partials/landing.html
@@ -3,8 +3,8 @@
     <h1>Lytup <small>Simple file sharing</small></h1>
   </div>
 
-  <div class="center-block lead features">
-    <ul class="fa-ul">
+  <div class="center-block features">
+    <ul class="list-unstyled lead">
       <li>
         <i class="fa fa-check-circle-o fa-lg"></i>
         Share pictures, videos, music, documents and files
