--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -3066,16 +3066,32 @@ body {
   font-size: 40%;
 }
 .landing .features {
-  margin-top: 50px;
-  max-width: 500px;
-  font-size: 16px;
+  margin-top: 48px;
+  max-width: 480px;
+}
+.landing .features .lead {
+  font-size: 18px;
 }
 .landing .features i {
   color: green;
 }
 .landing .get-started {
-  margin-top: 50px;
+  margin-top: 48px;
   text-align: center;
+}
+@media (max-width: 767px) {
+  .landing {
+    margin-top: 24px;
+  }
+  .landing .slogan h1 {
+    font-size: 36px;
+  }
+  .landing .features {
+    margin-top: 24px;
+  }
+  .landing .features .lead {
+    font-size: 12px;
+  }
 }
 .drop-box {
   max-width: 500px;
@@ -3114,7 +3130,7 @@ body {
 }
 .grid-item-action {
   padding: 5px;
-  height: 40px;
+  height: 20%;
   width: 100%;
   text-align: right;
 }
@@ -3123,7 +3139,7 @@ body {
 }
 .grid-item-holder {
   position: relative;
-  height: 160px;
+  height: 80%;
   width: 100%;
   color: #000;
 }
@@ -3136,7 +3152,7 @@ body {
 }
 .grid-item-progress {
   position: absolute;
-  bottom: 55px;
+  bottom: 37.5%;
   width: 100%;
   text-align: center;
 }
