Removed response status for download files

--- a/web/public/partials/folder.html
+++ b/web/public/partials/folder.html
@@ -4,7 +4,7 @@
       <li>
         <button type="button" class="btn btn-default btn-cir"
             bs-tooltip title="Share Folder">
-          <i class="fa fa-share fa-lg"></i>
+          <i class="fa fa-share-alt fa-lg"></i>
         </button>
       </li>
       <li>
@@ -53,8 +53,8 @@
       <div class="grid-item-action">
         <ul class="list-inline">
           <li>
-            <a href="" ly-download data-uri="/d/{{file.id}}" bs-tooltip
-                title="Download">
+            <a href="/d/{{file.id}}" ly-download data-uri="/d/{{file.id}}"
+                bs-tooltip title="Download">
               <i class="fa fa-download fa-lg"></i>
             </a>
           </li>
