--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -3094,7 +3094,7 @@ body {
   }
 }
 .drop-box {
-  max-width: 500px;
+  max-width: 480px;
   border: 5px dashed #ddd;
   text-align: center;
   padding: 70px 0;
@@ -3179,7 +3179,6 @@ body {
   color: #000;
 }
 .footer {
-  display: table;
   position: absolute;
   bottom: 0;
   height: 60px;
@@ -3187,8 +3186,8 @@ body {
   background-color: #f5f5f5;
 }
 .footer .container {
-  display: table-cell;
-  vertical-align: middle;
+  padding-top: 24px;
+  padding-bottom: 8px;
 }
 /* ========
   AngularJS
