--- a/web/public/css/main.less
+++ b/web/public/css/main.less
@@ -95,7 +95,7 @@ body {
 }
 
 .drop-box {
-  max-width: 500px;
+  max-width: 480px;
   border: 5px dashed #ddd;
   text-align: center;
   padding: 70px 0;
@@ -197,15 +197,14 @@ body {
 }
 
 .footer {
-  display: table;
   position: absolute;
   bottom: 0;
   height: 60px;
   width: 100%;
   background-color: #f5f5f5;
   .container {
-    display: table-cell;
-    vertical-align: middle;
+    padding-top: 24px;
+    padding-bottom: 8px;
   }
 }
 
