--- a/web/public/partials/home.html
+++ b/web/public/partials/home.html
@@ -28,8 +28,8 @@
       <div class="grid-item-action">
         <ul class="list-inline">
           <li>
-            <a href="" ly-download data-uri="/d/{{fol.id}}" bs-tooltip
-                title="Download">
+            <a href="/d/{{fol.id}}" ly-download data-uri="/d/{{fol.id}}"
+                bs-tooltip title="Download">
               <i class="fa fa-download fa-lg"></i>
             </a>
           </li>
