--- a/web/public/partials/folder.html
+++ b/web/public/partials/folder.html
@@ -1,5 +1,5 @@
 <div class="row folder-panel">
-  <div class="col-md-4 col-xs-6 menu-left">
+  <div class="col-md-3 col-xs-3 menu-left">
     <ul class="list-inline">
       <li>
         <button type="button" class="btn btn-default btn-cir"
@@ -15,7 +15,7 @@
       </li>
     </ul>
   </div>
-  <div class="col-md-4 menu-center">
+  <div class="col-md-6 col-xs-6 menu-center">
     <h4>
       {{folder.files.length}} FILES
       <small ng-show="folder.files.length">
@@ -25,7 +25,7 @@
       </small>
     </h4>
   </div>
-  <div class="col-md-4 col-xs-6 menu-right">
+  <div class="col-md-3 col-xs-3 menu-right">
     <ul class="list-inline">
       <li>
         <div class="btn btn-default btn-file btn-cir"
