--- a/web/public/partials/home.html
+++ b/web/public/partials/home.html
@@ -1,5 +1,5 @@
 <div class="row home-panel">
-  <div class="col-md-4 col-xs-6 menu-left">
+  <div class="col-md-4 col-xs-4 menu-left">
     <ul class="list-inline">
       <li>
         <button type="button" class="btn btn-default btn-cir"
@@ -9,10 +9,10 @@
       </li>
     </ul>
   </div>
-  <div class="col-md-4 menu-center">
+  <div class="col-md-4 col-xs-4 menu-center">
     <h4>{{folders.length}} FOLDERS</h4>
   </div>
-  <div class="col-md-4 col-xs-6 menu-right">
+  <div class="col-md-4 col-xs-4 menu-right">
     <ul class="list-inline">
       <li>
         <button type="button" class="btn btn-primary" ng-click="createFolder()">
