--- a/web/public/partials/landing.html
+++ b/web/public/partials/landing.html
@@ -22,8 +22,43 @@
   </div>
 
   <div class="get-started">
-    <a href="/home" class="btn btn-success btn-lg">
-      <i class="fa fa-paw fa-lg"></i> Get Started
-    </a>
+    <button type="button" class="btn btn-success btn-lg" data-toggle="modal"
+        data-target=".sign-up-form">
+      <i class="fa fa-paw fa-lg"></i> Sign Up
+    </button>
+  </div>
+</div>
+
+<!-- Sign-up form modal -->
+<div class="modal fade sign-up-form" tabindex="-1" role="dialog"
+    aria-labelledby="sign-up-form-label" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"
+            aria-hidden="true">
+          &times;
+        </button>
+        <h4 class="modal-title" id="sign-up-form-label">Sign Up</h4>
+      </div>
+      <div class="modal-body">
+        <form role="form">
+          <div class="form-group">
+            <input type="email" class="form-control" placeholder="Name">
+          </div>
+          <div class="form-group">
+            <input type="email" class="form-control" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">
+          Sign Up
+        </button>
+      </div>
+    </div>
   </div>
 </div>
