Fixed bootstrap tooltip display

--- a/web/public/css/main.less
+++ b/web/public/css/main.less
@@ -226,3 +226,11 @@ body {
 .btn-cir:active {
   background: transparent;
 }
+
+/* ui-bootstrap */
+.nav,
+.pagination,
+.carousel,
+.panel-title a {
+  cursor: pointer;
+}
