--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -1,6 +1,3 @@
-/* ===================
-   Browse happy prompt
-   =================== */
 .browse-happy {
   margin: 0.2em 0;
   background: #ccc;
@@ -198,4 +195,11 @@ body {
 .btn-cir:focus,
 .btn-cir:active {
   background: transparent;
+}
+/* ui-bootstrap */
+.nav,
+.pagination,
+.carousel,
+.panel-title a {
+  cursor: pointer;
 }
