--- a/web/public/css/bootstrap.less
+++ b/web/public/css/bootstrap.less
@@ -5,3 +5,19 @@
 @border-radius-base: 0;
 @border-radius-large: 0;
 @border-radius-small: 0;
+
+@font-family-sans-serif: "Open Sans", sans-serif;
+@font-family-serif: "Open Sans", serif;
+
+/* .btn {
+  border: 0;
+}
+
+.btn-success {
+  box-shadow: 0px 4px darken(@btn-success-bg, 16%);
+}
+
+.btn-success:hover {
+  box-shadow: 0px 4px darken(@btn-success-bg, 16%);
+}
+ */
