--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -1,3 +1,285 @@
+/***
+
+   colors.css v2.0.0
+   http://clrs.cc
+   @mrmrs
+   MIT License
+
+***/
+/*
+
+   SKINS
+   - Backgrounds
+   - Colors
+   - Border colors
+   - SVG fills
+   - SVG strokes
+
+*/
+/* Backgrounds */
+.bg-navy {
+  background-color: #001f3f;
+}
+.bg-blue {
+  background-color: #0074d9;
+}
+.bg-aqua {
+  background-color: #7fdbff;
+}
+.bg-teal {
+  background-color: #39cccc;
+}
+.bg-olive {
+  background-color: #3d9970;
+}
+.bg-green {
+  background-color: #2ecc40;
+}
+.bg-lime {
+  background-color: #01ff70;
+}
+.bg-yellow {
+  background-color: #ffdc00;
+}
+.bg-orange {
+  background-color: #ff851b;
+}
+.bg-red {
+  background-color: #ff4136;
+}
+.bg-fuchsia {
+  background-color: #f012be;
+}
+.bg-purple {
+  background-color: #b10dc9;
+}
+.bg-maroon {
+  background-color: #85144b;
+}
+.bg-white {
+  background-color: #ffffff;
+}
+.bg-gray {
+  background-color: #aaaaaa;
+}
+.bg-silver {
+  background-color: #dddddd;
+}
+.bg-black {
+  background-color: #111111;
+}
+/* Colors */
+.navy {
+  color: #001f3f;
+}
+.blue {
+  color: #0074d9;
+}
+.aqua {
+  color: #7fdbff;
+}
+.teal {
+  color: #39cccc;
+}
+.olive {
+  color: #3d9970;
+}
+.green {
+  color: #2ecc40;
+}
+.lime {
+  color: #01ff70;
+}
+.yellow {
+  color: #ffdc00;
+}
+.orange {
+  color: #ff851b;
+}
+.red {
+  color: #ff4136;
+}
+.fuchsia {
+  color: #f012be;
+}
+.purple {
+  color: #b10dc9;
+}
+.maroon {
+  color: #85144b;
+}
+.white {
+  color: #ffffff;
+}
+.silver {
+  color: #dddddd;
+}
+.gray {
+  color: #aaaaaa;
+}
+.black {
+  color: #111111;
+}
+/* Border colors 
+
+   Use with another border utility that sets border-width and style 
+   i.e .border { border-width: 1px; border-style: solid; }     
+*/
+.border--navy {
+  border-color: #001f3f;
+}
+.border--blue {
+  border-color: #0074d9;
+}
+.border--aqua {
+  border-color: #7fdbff;
+}
+.border--teal {
+  border-color: #39cccc;
+}
+.border--olive {
+  border-color: #3d9970;
+}
+.border--green {
+  border-color: #2ecc40;
+}
+.border--lime {
+  border-color: #01ff70;
+}
+.border--yellow {
+  border-color: #ffdc00;
+}
+.border--orange {
+  border-color: #ff851b;
+}
+.border--red {
+  border-color: #ff4136;
+}
+.border--fuchsia {
+  border-color: #f012be;
+}
+.border--purple {
+  border-color: #b10dc9;
+}
+.border--maroon {
+  border-color: #85144b;
+}
+.border--white {
+  border-color: #ffffff;
+}
+.border--gray {
+  border-color: #aaaaaa;
+}
+.border--silver {
+  border-color: #dddddd;
+}
+.border--black {
+  border-color: #111111;
+}
+/* Fills for SVG */
+.fill-navy {
+  fill: #001f3f;
+}
+.fill-blue {
+  fill: #0074d9;
+}
+.fill-aqua {
+  fill: #7fdbff;
+}
+.fill-teal {
+  fill: #39cccc;
+}
+.fill-olive {
+  fill: #3d9970;
+}
+.fill-green {
+  fill: #2ecc40;
+}
+.fill-lime {
+  fill: #01ff70;
+}
+.fill-yellow {
+  fill: #ffdc00;
+}
+.fill-orange {
+  fill: #ff851b;
+}
+.fill-red {
+  fill: #ff4136;
+}
+.fill-fuchsia {
+  fill: #f012be;
+}
+.fill-purple {
+  fill: #b10dc9;
+}
+.fill-maroon {
+  fill: #85144b;
+}
+.fill-white {
+  fill: #ffffff;
+}
+.fill-gray {
+  fill: #aaaaaa;
+}
+.fill-silver {
+  fill: #dddddd;
+}
+.fill-black {
+  fill: #111111;
+}
+/* Strokes for SVG */
+.stroke-navy {
+  stroke: #001f3f;
+}
+.stroke-blue {
+  stroke: #0074d9;
+}
+.stroke-aqua {
+  stroke: #7fdbff;
+}
+.stroke-teal {
+  stroke: #39cccc;
+}
+.stroke-olive {
+  stroke: #3d9970;
+}
+.stroke-green {
+  stroke: #2ecc40;
+}
+.stroke-lime {
+  stroke: #01ff70;
+}
+.stroke-yellow {
+  stroke: #ffdc00;
+}
+.stroke-orange {
+  stroke: #ff851b;
+}
+.stroke-red {
+  stroke: #ff4136;
+}
+.stroke-fuchsia {
+  stroke: #f012be;
+}
+.stroke-purple {
+  stroke: #b10dc9;
+}
+.stroke-maroon {
+  stroke: #85144b;
+}
+.stroke-white {
+  stroke: #ffffff;
+}
+.stroke-gray {
+  stroke: #aaaaaa;
+}
+.stroke-silver {
+  stroke: #dddddd;
+}
+.stroke-black {
+  stroke: #111111;
+}
 .browse-happy {
   margin: 0.2em 0;
   background: #ccc;
@@ -83,47 +365,90 @@ body {
   outline: none;
 }
 .grid-item {
+  width: 200px;
+  margin-bottom: 20px;
+}
+.grid-item-holder {
+  position: relative;
+  height: 200px;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+.grid-item-holder .grid-item-top {
+  position: absolute;
+  padding-top: 10px;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(17, 17, 17, 0.5);
+}
+.grid-item-holder .grid-item-top a {
+  color: #ffffff;
+}
+.grid-item-holder .grid-item-top a:hover {
+  color: #e6e6e6;
+}
+.grid-item-holder .grid-item-progress {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+}
+.grid-item-info {
+  text-align: center;
+}
+.grid-item-info h5 {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+/* .grid-item {
   height: 200px;
   width: 200px;
   margin-bottom: 20px;
   box-shadow: 6px 6px 3px #888;
   background: #fff;
 }
+
 .grid-item-action {
+  ul {
+    display: none;
+  }
   padding: 5px;
   height: 20%;
   width: 100%;
   text-align: right;
-}
-.grid-item-action ul {
-  display: none;
-}
+};
+
 .grid-item-holder {
   position: relative;
   height: 80%;
   width: 100%;
   color: #000;
 }
+
 .grid-item-info {
   position: absolute;
   bottom: 0;
   width: 100%;
   padding: 5px;
   text-align: center;
+  h5 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
-.grid-item-info h5 {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+
 .grid-item-progress {
   position: absolute;
   bottom: 37.5%;
   width: 100%;
   text-align: center;
 }
+
+
 .grid-item:hover .grid-item-action ul {
   display: block;
-}
+} */
 .social-icon {
   text-align: right;
 }
