--- a/web/public/css/main.less
+++ b/web/public/css/main.less
@@ -113,9 +113,9 @@ body {
     text-align: center;
     background-color: fade(@black, 50%);
     a {
-      color: @white;
+      color: @silver;
       &:hover {
-        color: darken(@white, 10%);
+        color: darken(@silver, 10%);
       }
     }
   }
