Worked on #5 and #9
Signed-off-by: Vishal Rana <vr@labstack.com>

--- a/server/templates/emails/base.html
+++ b/server/templates/emails/base.html
@@ -8,6 +8,10 @@
 
 <body style="font: 13px 'Lucida Grande', Arial, sans-serif;">
   {{template "content" .}}
+  <p>
+    Thanks,
+    <br>The Lytup Team
+  </p>
   <p style="margin-top: 25px; padding-top: 3px; border-top: 1px solid #ccc;
       font-size: 11px; color: #999;">
     This message was intended for {{.email}}. If this was in error, please
