--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -518,7 +518,7 @@ body {
 .btn-cir:active {
   background: transparent;
 }
-/* ui-bootstrap */
+/* UI Bootstrap */
 .nav,
 .pagination,
 .carousel,
